--- a/Kompose/app/src/main/res/menu/main_toolbar_menu.xml
+++ b/Kompose/app/src/main/res/menu/main_toolbar_menu.xml
@@ -10,14 +10,16 @@
         android:title="@string/action_history"
         app:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/main_toolbar_settings"
+        android:icon="@drawable/ic_settings_white_24dp"
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/main_toolbar_help"
         android:icon="@drawable/ic_action_help"
         android:title="@string/action_help"
         app:showAsAction="ifRoom"/>
 
-    <item android:id="@+id/main_toolbar_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
 
 </menu>
