--- a/Kompose/app/src/main/res/layout/fragment_join_session.xml
+++ b/Kompose/app/src/main/res/layout/fragment_join_session.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="android.view.View" />
 
         <variable
@@ -24,6 +23,8 @@
 
             <TextView
                 style="@style/SecondaryTextView"
+                android:layout_marginTop="3sp"
+                android:layout_marginBottom="3sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/join_existing_party" />
@@ -41,6 +42,7 @@
                 style="@style/DefaultEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="3sp"
                 android:hint="@string/your_name"
                 android:inputType="textPersonName"
                 android:text="@={viewModel.clientName}"
