--- a/Kompose/app/src/main/res/layout/fragment_join_session.xml
+++ b/Kompose/app/src/main/res/layout/fragment_join_session.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="android.view.View" />
 
         <variable
@@ -23,10 +24,10 @@
 
             <TextView
                 style="@style/SecondaryTextView"
-                android:layout_marginTop="3sp"
-                android:layout_marginBottom="3sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="3sp"
+                android:layout_marginTop="3sp"
                 android:text="@string/join_existing_party" />
 
             <LinearLayout style="@style/HorizontalDividerLayout" />
@@ -35,7 +36,7 @@
                 style="@style/LabelTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/your_name"/>
+                android:text="@string/your_name" />
 
             <EditText
                 style="@style/DefaultEditText"
@@ -45,7 +46,7 @@
                 android:hint="@string/your_name"
                 android:inputType="textPersonName"
                 android:text="@={viewModel.clientName}"
-                tools:text="hi mom"/>
+                tools:text="hi mom" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,15 +61,14 @@
                     android:text="@string/looking_for_parties" />
 
             </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/session_join_view">
+
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/session_join_view">
-
-        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
-
 </layout>
