--- a/Kompose/app/src/main/res/menu/menu_playlist_activity.xml
+++ b/Kompose/app/src/main/res/menu/menu_playlist_activity.xml
@@ -8,7 +8,8 @@
 
     <item android:id="@+id/add_link"
         android:title="@string/add_link"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_action_add"
+        app:showAsAction="ifRoom" />
 
     <item android:id="@+id/show_history"
         android:title="@string/show_history"
