--- a/Kompose/app/src/main/res/values/styles.xml
+++ b/Kompose/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="ToolbarStyle" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorSecondary">#ffffff</item>
-        <!--<item name="android:background">@color/colorPrimary</item>-->
+        <item name="android:gravity">center</item>
     </style>
 
     <!-- Secondary application theme. -->
@@ -24,6 +24,19 @@
     <style name="KomposeTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">@color/colorWhite</item>
+        <item name="tabTextAppearance">@style/AppTabTextAppearance</item>
+        <item name="tabSelectedTextColor">@color/colorWhite</item>
+        <item name="tabIndicatorHeight">3dp</item>
+    </style>
+
+    <!--TabLayout text-->
+    <style name="AppTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="textAllCaps">true</item>
     </style>
 
     <style name="KomposeTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -95,22 +108,26 @@
     </style>
 
     <style name="DefaultEditText">
-        <item name="android:layout_marginStart">0pt</item>
+        <item name="android:layout_marginStart">1pt</item>
+        <item name="android:layout_marginEnd">1pt</item>
     </style>
 
     <style name="LabelTextView" parent="BaseTextView">
         <item name="android:layout_marginBottom">-2pt</item>
         <item name="android:textColor">#000</item>
         <item name="android:textSize">6pt</item>
-        <item name="android:layout_marginLeft">2pt</item>
-        <item name="android:layout_marginRight">2pt</item>
+        <item name="android:layout_marginLeft">3pt</item>
+        <item name="android:layout_marginRight">3pt</item>
     </style>
 
     <style name="PrimaryButton">
         <item name="android:fontFamily">@font/russo_one</item>
-        <item name="android:textSize">8pt</item>
+        <item name="android:textSize">7pt</item>
         <item name="android:background">@color/colorAccent</item>
-        <item name="android:padding">6pt</item>
+        <item name="android:paddingLeft">5pt</item>
+        <item name="android:paddingRight">5pt</item>
+        <item name="android:paddingTop">3pt</item>
+        <item name="android:paddingBottom">3pt</item>
         <item name="android:textColor">#fff</item>
         <item name="android:layout_marginLeft">2pt</item>
         <item name="android:layout_marginRight">2pt</item>
